--- a/index.html
+++ b/index.html
@@ -32,13 +32,10 @@
         <div class="home-content">
             <h1>Hi,</h1>
             <h1>I'm <span class="multiple-text"> a Frontend Developer</span></h1>
-            <p>Hi,Imagine this. You open your instagram and reach your DMs. See a decent guy, maybe a 7/10. You're
-                unsure about to accept the message request or not but you read his message. You like it. You like it,
-                it's captivating. Fuck it, you accept.BOOM ! You start talking. Conversations are engaging. He listens,
-                he cares, he's geniune. You bring him home for the holidays. Your family loves him. A couple of years
-                pass. You get married. YOu found love in a hopeless place. Cool story?
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, itaque! Facilis quas fugiat provident
+                enim aspernatur commodi optio sequi architecto ad ex, temporibus, fuga saepe? Nam impedit illum nemo ab!
 
-                It's not gonna happen, but I can bring you flowers</p>
+            </p>
             <div class="social-media">
                 <a href="#"><i class="fa-brands fa-facebook"></i></a>
                 <a href="#"><i class="fa-brands fa-github"></i></a>
@@ -59,7 +56,7 @@
             <img src="image.png" alt="">
         </div>
         <div class="about-content">
-            <h2 class="heading">ABOUT<span> Me</span></h2>
+            <h2 class="heading">About<span> Me</span></h2>
             <h3>Frontend Developer</h3>
             <p>Hi,Imagine this. You open your instagram and reach your DMs. See a decent guy, maybe a 7/10. You're
                 unsure about to accept the message request or not but you read his message. You like it. You like it,
