--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <!-- header design -->
     <header class="header">
-        <a href="#" class="logo">P<span class="o">o</span>rtfolio.</a>
+        <a href="#" class="logo">P<span class="o">o</span>rtfolio</a>
         <i class="fa-solid fa-bars" id="menu-icon"></i>
         <nav class="navbar">
             <a href="#home" class="active">Home</a>
@@ -32,14 +32,15 @@
         <div class="home-content">
             <h1>Hi,</h1>
             <h1>I'm <span class="multiple-text"> a Frontend Developer</span></h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, itaque! Facilis quas fugiat provident
-                enim aspernatur commodi optio sequi architecto ad ex, temporibus, fuga saepe? Nam impedit illum nemo ab!
-
+            <p>Currently, I am a third year IT undergrad at Techno Main Salt Lake.I'm currently inclined towards
+                developing frontend of websites and am fond of designing captivating UI designs.
+                I'm also a graphic designer by passion.
             </p>
             <div class="social-media">
-                <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                <a href="#"><i class="fa-brands fa-github"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+
+                <a href="https://github.com/AnkitXGandhi"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.facebook.com/ankit.gandhi.750/"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.instagram.com/the_midnight_swan/"><i class="fa-brands fa-instagram"></i></a>
                 <a href="https://www.linkedin.com/in/ankit-gandhi-287b97223/"><i class="fa-brands fa-linkedin"></i></a>
             </div>
             <a href="#" class="btn">Download CV <i class="fa-solid fa-arrow-right"></i></a>
@@ -103,7 +104,7 @@
             <div class="portfolio-box">
                 <img src="1.jpg">
                 <div class="portfolio-layer">
-                    <h4>Web design</h4>
+                    <h4>Portfolio</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, debitis enim soluta, eum
                     </p>
                 </div>
@@ -111,7 +112,7 @@
             <div class="portfolio-box">
                 <img src="2.jpg">
                 <div class="portfolio-layer">
-                    <h4>UI/UX design</h4>
+                    <h4>Weather App</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, debitis enim soluta, eum
                     </p>
 
@@ -120,7 +121,7 @@
             <div class="portfolio-box">
                 <img src="3.jpg">
                 <div class=" portfolio-layer">
-                    <h4>App Development</h4>
+                    <h4>Calculator</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, debitis enim soluta, eum
                     </p>
 
