--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
                 <a href="https://www.instagram.com/the_midnight_swan/"><i class="fa-brands fa-instagram"></i></a>
                 <a href="https://www.linkedin.com/in/ankit-gandhi-287b97223/"><i class="fa-brands fa-linkedin"></i></a>
             </div>
-            <a href="#" class="btn">Download CV <i class="fa-solid fa-arrow-right"></i></a>
+            <a href="collegeResume.pdf" download="AnkitGandhi_resume" class="btn">Download CV <i
+                    class="fa-solid fa-arrow-right"></i></a>
         </div>
         <div class="home-img">
             <img src="portdp.png" alt="Adding this later">
