--- a/index.html
+++ b/index.html
@@ -38,10 +38,13 @@
             </p>
             <div class="social-media">
 
-                <a href="https://github.com/AnkitXGandhi"><i class="fa-brands fa-github"></i></a>
-                <a href="https://www.facebook.com/ankit.gandhi.750/"><i class="fa-brands fa-facebook"></i></a>
-                <a href="https://www.instagram.com/the_midnight_swan/"><i class="fa-brands fa-instagram"></i></a>
-                <a href="https://www.linkedin.com/in/ankit-gandhi-287b97223/"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://github.com/AnkitXGandhi" target="_blank"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.facebook.com/ankit.gandhi.750/" target="_blank"><i
+                        class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.instagram.com/the_midnight_swan/" target="_blank"><i
+                        class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/ankit-gandhi-287b97223/" target="_blank"><i
+                        class="fa-brands fa-linkedin"></i></a>
             </div>
             <a href="collegeResume.pdf" download="AnkitGandhi_resume" class="btn">Download CV <i
                     class="fa-solid fa-arrow-right"></i></a>
@@ -60,13 +63,18 @@
         <div class="about-content">
             <h2 class="heading">About<span> Me</span></h2>
             <h3>Frontend Developer</h3>
-            <p>Hi,Imagine this. You open your instagram and reach your DMs. See a decent guy, maybe a 7/10. You're
-                unsure about to accept the message request or not but you read his message. You like it. You like it,
-                it's captivating. Fuck it, you accept.BOOM ! You start talking. Conversations are engaging. He listens,
-                he cares, he's geniune. You bring him home for the holidays. Your family loves him. A couple of years
-                pass. You get married. YOu found love in a hopeless place. Cool story?
-                It's not gonna happen, but I can bring you flowers</p>
-            <a href="#" class="btn">Read more</a>
+            <p>
+                I'm a passionate 3rd-year undergraduate student at Techno Main Salt Lake, specializing in frontend
+                development with a strong command of HTML, CSS, and JavaScript. With UI/UX certifications from Google, I
+                bring a keen eye for design and user experience to every project. As a graphic designer, I thrive on
+                creating visually appealing and intuitive interfaces that captivate users. I've spearheaded projects
+                like a dynamic car rental website and an e-commerce platform for shoe enthusiasts, showcasing my skills
+                in web development and design. Additionally, I've developed various basic projects, including a
+                calculator, weather app, and to-do list, honing my coding prowess. With an impressive 8.6 aggregate CGPA
+                in college academics, I am dedicated to continuous learning and growth in the ever-evolving field of
+                technology.
+            </p>
+            <!-- <a href="#" class="btn">Read more</a> -->
         </div>
     </section>
     <!-- Service Section Design -->
@@ -76,25 +84,27 @@
             <div class="services-box">
                 <i class="fa-solid fa-code"></i>
                 <h3>Web Development</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut eaque quisquam magni nesciunt tenetur
-                    recusandae, sit quidem tempore nostrum voluptate, impedit repellat, ea totam exercitationem iusto
-                    maxime! Sed, sint officia?</p>
+                <p>I have been learning Web Development since a couple of months and currently learning about ReactJS.
+                    I have completed a lot of projects including a to-do list and a simple calculator.
+                </p>
                 <a href="#" class="btn">Read More</a>
             </div>
             <div class="services-box">
                 <i class="fa-solid fa-palette"></i>
                 <h3>UI/UX Designer</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut eaque quisquam magni nesciunt tenetur
-                    recusandae, sit quidem tempore nostrum voluptate, impedit repellat, ea totam exercitationem iusto
-                    maxime! Sed, sint officia?</p>
+                <p>
+                    I started learning about UI/UX in my second year of college and have helped in increasing the user
+                    experience
+                    in many of my projects including various mobile applications.
+                </p>
                 <a href="#" class="btn">Read More</a>
             </div>
             <div class="services-box">
                 <i class="fa-brands fa-android"></i>
                 <h3>Android Development</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut eaque quisquam magni nesciunt tenetur
-                    recusandae, sit quidem tempore nostrum voluptate, impedit repellat, ea totam exercitationem iusto
-                    maxime! Sed, sint officia?</p>
+                <p>I am currently at the beginner level of Android Development. I am familiar with technologies
+                    like flutter and Android Studio that help me to create and design apps;
+                </p>
                 <a href="#" class="btn">Read More</a>
             </div>
         </div>
@@ -103,31 +113,35 @@
         <h2 class="heading">Latest <span>Projects</span></h2>
         <div class="portfolio-container">
             <div class="portfolio-box">
-                <img src="1.jpg">
-                <div class="portfolio-layer">
-                    <h4>Portfolio</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, debitis enim soluta, eum
-                    </p>
-                </div>
+                <img src="1.jpg"><a href="https://port-folio-seven-chi.vercel.app/" target="_blank">
+                    <div class="portfolio-layer">
+                        <h4>Portfolio</h4>
+                        <p>Created a portfolio website showcasing my HTML,CSS and Javascript Skills. This is
+                            responsive and with lots of adjustments according to the screen size.
+                        </p>
+                </a>
             </div>
-            <div class="portfolio-box">
-                <img src="2.jpg">
+        </div>
+        <div class="portfolio-box">
+            <img src="2.jpg"> <a href="https://weather-app-seven-sandy-60.vercel.app/" target="_blank">
                 <div class="portfolio-layer">
                     <h4>Weather App</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, debitis enim soluta, eum
+                    <p>A weather webapp that shows us the weather of any particular city or area just by typing
+                        the name the place. It uses OpenWeather API to fetch the required data.
                     </p>
-
-                </div>
-            </div>
-            <div class="portfolio-box">
-                <img src="3.jpg">
+            </a>
+        </div>
+        </div>
+        <div class="portfolio-box">
+            <img src="3.jpg"><a href="https://calculator-sable-delta.vercel.app/" target="_blank">
                 <div class=" portfolio-layer">
                     <h4>Calculator</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, debitis enim soluta, eum
+                    <p>Created a simple calculator app that can perform basic arithmetic operations and display
+                        the output. Simple and easy to use with great UI and design.
                     </p>
-
-                </div>
-            </div>
+            </a>
+        </div>
+        </div>
         </div>
     </section>
     <!-- CONTACT SECTION DESIGN -->
