--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="home-content">
             <h1>Hi,</h1>
             <h1>I'm <span class="multiple-text"> a Frontend Developer</span></h1>
-            <p>Currently, I am a third year IT undergrad at Techno Main Salt Lake.I'm currently inclined towards
+            <p>Currently, I am a fourth year IT undergrad at Techno Main Salt Lake. I'm inclined towards
                 developing frontend of websites and am fond of designing captivating UI designs.
                 I'm also a graphic designer by passion.
             </p>
@@ -46,7 +46,7 @@
                 <a href="https://www.linkedin.com/in/ankit-gandhi-287b97223/" target="_blank"><i
                         class="fa-brands fa-linkedin"></i></a>
             </div>
-            <a href="collegeResume.pdf" download="AnkitGandhi_resume" class="btn">Download CV <i
+            <a href="AnkitGandhi_CV.pdf" download="AnkitGandhi_resume" class="btn">Download CV <i
                     class="fa-solid fa-arrow-right"></i></a>
         </div>
         <div class="home-img">
@@ -64,8 +64,9 @@
             <h2 class="heading">About<span> Me</span></h2>
             <h3>Frontend Developer</h3>
             <p>
-                I'm a passionate 3rd-year undergraduate student at Techno Main Salt Lake, specializing in frontend
-                development with a strong command of HTML, CSS, and JavaScript. With UI/UX certifications from Google, I
+                I'm a passionate 4th-year undergraduate student at Techno Main Salt Lake, specializing in frontend
+                development with a strong command of HTML, CSS, and JavaScript frameworks like ReactJS, NextJS. With
+                UI/UX certifications from Google, I
                 bring a keen eye for design and user experience to every project. As a graphic designer, I thrive on
                 creating visually appealing and intuitive interfaces that captivate users. I've spearheaded projects
                 like a dynamic car rental website and an e-commerce platform for shoe enthusiasts, showcasing my skills
@@ -113,11 +114,12 @@
         <h2 class="heading">Latest <span>Projects</span></h2>
         <div class="portfolio-container">
             <div class="portfolio-box">
-                <img src="1.jpg"><a href="https://port-folio-seven-chi.vercel.app/" target="_blank">
+                <img src="1.jpg"><a href="https://we-chat-vc.vercel.app/" target="_blank">
                     <div class="portfolio-layer">
-                        <h4>Portfolio</h4>
-                        <p>Created a portfolio website showcasing my HTML,CSS and Javascript Skills. This is
-                            responsive and with lots of adjustments according to the screen size.
+                        <h4>WeChat</h4>
+                        <p>
+                            Developed a web application enabling real-time video communication, incorporating
+                            features such as screen sharing, chat, and participant management.
                         </p>
                 </a>
             </div>
@@ -133,11 +135,11 @@
         </div>
         </div>
         <div class="portfolio-box">
-            <img src="3.jpg"><a href="https://calculator-sable-delta.vercel.app/" target="_blank">
+            <img src="3.jpg"><a href="https://to-do-application-using-react.vercel.app/" target="_blank">
                 <div class=" portfolio-layer">
-                    <h4>Calculator</h4>
-                    <p>Created a simple calculator app that can perform basic arithmetic operations and display
-                        the output. Simple and easy to use with great UI and design.
+                    <h4>To-Do App</h4>
+                    <p>Created a responsive to-do app using React, utilizing local storage for
+                        persistent state management, ensuring seamless user experience across sessions.
                     </p>
             </a>
         </div>
