--- a/index.html
+++ b/index.html
@@ -125,11 +125,11 @@
             </div>
         </div>
         <div class="portfolio-box">
-            <img src="2.jpg"> <a href="https://weather-app-seven-sandy-60.vercel.app/" target="_blank">
+            <img src="2.jpg"> <a href="https://memory-matching-pi.vercel.app/" target="_blank">
                 <div class="portfolio-layer">
-                    <h4>Weather App</h4>
-                    <p>A weather webapp that shows us the weather of any particular city or area just by typing
-                        the name the place. It uses OpenWeather API to fetch the required data.
+                    <h4>Match Making Game</h4>
+                    <p>Developed an interactive match-making game with vanilla HTML, CSS, and JavaScript,
+                        featuring intuitive game logic and a user-friendly interface.
                     </p>
             </a>
         </div>
